# benchgen

./: .gitignore  AGENTS.md  CMakeLists.txt  NOTICE  README.md
cmake_modules/: BenchmarkArrow.cmake
include/benchgen/: arrow_compat.h  benchmark_suite.h  generator_options.h  record_batch_iterator.h  record_batch_iterator_factory.h  table.h
scripts/: README.md  generate_scale10_parallel.sh  validate_scale10_parallel.sh  validate_scale10_parallel_vs_serial.sh
scripts/ssb/: generate_embedded_distribution.py
scripts/tpcds/: generate_embedded_distribution.py
scripts/tpch/: generate_dists_embedded.py
src/: CMakeLists.txt  gen_schema_main.cc  gen_table_main.cc
src/common/: gen_table_args.h  schema_cli.h
src/ssb/: CMakeLists.txt  ssb_benchmark_suite.cc  ssb_types.h
src/ssb/distribution/: distribution.cc  distribution.h  distribution_provider.cc  distribution_provider.h  distribution_source.cc  distribution_source.h  embedded_distribution.h
src/ssb/generators/: customer_generator.cc  customer_generator.h  customer_row_generator.cc  customer_row_generator.h  date_generator.cc  date_generator.h  date_row_generator.cc  date_row_generator.h  lineorder_generator.cc  lineorder_generator.h  lineorder_row_generator.cc  lineorder_row_generator.h  part_generator.cc  part_generator.h  part_row_generator.cc  part_row_generator.h  supplier_generator.cc  supplier_generator.h  supplier_row_generator.cc  supplier_row_generator.h
src/ssb/utils/: constants.h  context.cc  context.h  random.cc  random.h  scaling.cc  scaling.h  utils.cc  utils.h
src/tpcds/: CMakeLists.txt  tpcds_benchmark_suite.cc  tpcds_gen_idx_main.cc
src/tpcds/distribution/: date_scaling.cc  date_scaling.h  distribution_provider.cc  distribution_provider.h  distribution_source.cc  distribution_source.h  dst_distribution.cc  dst_distribution.h  dst_distribution_store.cc  dst_distribution_store.h  dst_distribution_utils.cc  dst_distribution_utils.h  embedded_distribution.cc  embedded_distribution.h  embedded_distribution_data.h  scaling.cc  scaling.h  string_values_distribution.cc  string_values_distribution.h
src/tpcds/generators/: call_center_generator.cc  call_center_generator.h  call_center_row_generator.cc  call_center_row_generator.h  catalog_page_generator.cc  catalog_page_generator.h  catalog_page_row_generator.cc  catalog_page_row_generator.h  catalog_returns_generator.cc  catalog_returns_generator.h  catalog_returns_row_generator.cc  catalog_returns_row_generator.h  catalog_sales_generator.cc  catalog_sales_generator.h  catalog_sales_row_generator.cc  catalog_sales_row_generator.h  customer_address_generator.cc  customer_address_generator.h  customer_address_row_generator.cc  customer_address_row_generator.h  customer_demographics_generator.cc  customer_demographics_generator.h  customer_demographics_row_generator.cc  customer_demographics_row_generator.h  customer_generator.cc  customer_generator.h  customer_row_generator.cc  customer_row_generator.h  date_dim_generator.cc  date_dim_generator.h  date_dim_row_generator.cc  date_dim_row_generator.h  household_demographics_generator.cc  household_demographics_generator.h  household_demographics_row_generator.cc  household_demographics_row_generator.h  income_band_generator.cc  income_band_generator.h  income_band_row_generator.cc  income_band_row_generator.h  (+56 more)
src/tpcds/utils/: address.cc  address.h  build_support.cc  build_support.h  column_streams.cc  column_streams.h  columns.h  constants.h  date.cc  date.h  decimal.cc  decimal.h  join.cc  join.h  null_utils.cc  null_utils.h  permute.cc  permute.h  pricing.cc  pricing.h  random_number_stream.cc  random_number_stream.h  random_utils.cc  random_utils.h  row_streams.cc  row_streams.h  scd.cc  scd.h  table_metadata.cc  table_metadata.h  tables.h  text.cc  text.h  tpcds_internal.h
src/tpch/: CMakeLists.txt  tpch_benchmark_suite.cc
src/tpch/distribution/: distribution.cc  distribution.h  distribution_provider.cc  distribution_provider.h  distribution_source.cc  distribution_source.h  embedded_distribution.cc  embedded_distribution.h  scaling.cc  scaling.h
src/tpch/generators/: customer_generator.cc  customer_generator.h  customer_row_generator.cc  customer_row_generator.h  lineitem_generator.cc  lineitem_generator.h  lineitem_row_generator.cc  lineitem_row_generator.h  nation_generator.cc  nation_generator.h  nation_row_generator.cc  nation_row_generator.h  orders_generator.cc  orders_generator.h  orders_row_generator.cc  orders_row_generator.h  part_generator.cc  part_generator.h  part_row_generator.cc  part_row_generator.h  partsupp_generator.cc  partsupp_generator.h  partsupp_row_generator.cc  partsupp_row_generator.h  region_generator.cc  region_generator.h  region_row_generator.cc  region_row_generator.h  supplier_generator.cc  supplier_generator.h  supplier_row_generator.cc  supplier_row_generator.h
src/tpch/utils/: constants.h  context.cc  context.h  random.cc  random.h  text.cc  text.h  utils.cc  utils.h
src/util/: CMakeLists.txt  benchmark_suite_factory.cc  column_selection.h  record_batch_iterator_factory.cc  record_batch_writer.cc  record_batch_writer.h  table.cc
tests/: CMakeLists.txt
tests/ssb/: CMakeLists.txt  row_count_test.cc  row_generator_skip_rows_test.cc
tests/tpcds/: CMakeLists.txt  customer_generator_test.cc  generator_start_row_test.cc  md5.cc  md5.h  row_generator_skip_rows_test.cc
tests/tpcds/utils/: random_number_stream_test.cc
tests/tpch/: CMakeLists.txt  row_count_test.cc  skip_rows_test.cc
